<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/donorname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donorname"
        android:layout_marginTop="5dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/donorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/age"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/donorage"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/location"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:drawableTop="@drawable/icon_phone"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lastdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:text="@string/last_donation"
            android:textSize="17sp" />

    </RelativeLayout>

</RelativeLayout>


